<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/view_schedules"
        android:icon="@drawable/common_google_signin_btn_text_dark_normal"
        android:title="@string/view_schedules"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:showAsAction="never">

<!-- =========================== view menu sub menu =============================-->
        <menu>
            <item android:id="@+id/my_schedules"
                android:title="@string/my_schedules"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                app:showAsAction="never"/>
            <item android:id="@+id/sports_type"
                android:title="@string/sports_type"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                app:showAsAction="never"/>
             <item android:id="@+id/date_n_times"
                android:title="@string/date_n_times"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                app:showAsAction="never"/>
            <item android:id="@+id/view_all"
                android:title="@string/view_all"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                app:showAsAction="never"/>
        </menu>
<!-- =========================== end sub menu ====================================-->
    </item>

    <item android:id="@+id/add_schedule"
        android:title="@string/add_schedule"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:showAsAction="never"/>

    <item android:id="@+id/add_facility"
        android:title="@string/add_facility"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:showAsAction="never"/>

    <item android:id="@+id/isHybridCheckBox"
        android:title="Hybrid Map"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:checkable="true"
        android:visible="true"
        app:showAsAction="never"/>

 </menu>