<?xml version="1.0" encoding="utf-8"?>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/intro_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="1"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_centerInParent="true"

    tools:context="wtsc.letsplay10.Introduction">



    <TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="30dp"
            android:layout_span="2"
            android:textSize="16dp"
            android:gravity="center"
            android:lineSpacingMultiplier="1.2"
            android:text="Please enter your login credentials:" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="30dp"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/emailEntryText" />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:imeOptions="actionNext"
            android:id="@+id/emailField"
            />
    </TableRow>

    <TableRow>

    </TableRow>


    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="50dp"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/passwordEntryText" />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="50dp"
            android:maxLines="1"
            android:imeOptions="actionNext"
            android:id="@+id/passwordField"
            />
    </TableRow>
    <TableRow
        android:paddingTop="100dp" >

        <Button
            android:id="@+id/signIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:text="@string/signInButton" />
    </TableRow>

    <TableRow
        android:paddingTop="30dp" >
        <Button
                    android:id="@+id/createAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="2"
                    android:text="@string/createAccountButton"/>
    </TableRow>


</TableLayout>
